fixed and aligned map view

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -70,7 +70,6 @@ i {
   width: 100%;
   height: 100%;
   border-radius: 6px;
-  pointer-events: none;
 }
 
 
